--- a/newTweets.html
+++ b/newTweets.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="bootstrap/content/Content/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/content/Content/bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <script src="bootstrap/content/Scripts/bootstrap.min.js"></script>
     <script src="bootstrap/content/Scripts/bootstrap.js"></script>
     <script type="text/javascript" src="codebird.js"></script>
+    <script type="text/javascript" src="getTweets.js"></script>
 </head>
 <body>
 <div class="row">
@@ -15,7 +16,7 @@
     <div class="col-xs-12 col-md-4 text-center">
         <div class="row title">
             <div class="col-xs-1 col-md-1">
-                <img src="twitter1.png" alt="Twitter Img" style="width:80px;height:80px;">
+                <img src="images/twitter1.png" alt="Twitter Img" style="width:80px;height:80px;">
             </div>
             <div class="col-xs-10 col-md-10">
                 <h2>New tweets</h2>
@@ -38,7 +39,7 @@
     <div class="col-md-4"></div>
 </div>
 
-<script type="text/javascript" src="getNewTweets.js"></script>
+<script language="JavaScript">getNewTweets();</script>
 </body>
 </html>
 
