--- a/tweetsList.html
+++ b/tweetsList.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
     <script src="bootstrap/content/Scripts/bootstrap.min.js"></script>
     <script src="bootstrap/content/Scripts/bootstrap.js"></script>
+    <script type="text/javascript" src="codebird.js"></script>
     <script type="text/javascript" src="getTweets.js"></script>
 </head>
 <body>
