--- a/tweetsList.html
+++ b/tweetsList.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="bootstrap/content/Content/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap/content/Content/bootstrap.css">
-    <link rel="stylesheet" href="style/style.css">
-    <script src="bootstrap/content/Scripts/bootstrap.min.js"></script>
-    <script src="bootstrap/content/Scripts/bootstrap.js"></script>
-    <script type="text/javascript" src="codebird.js"></script>
-    <script type="text/javascript" src="getTweets.js"></script>
+    <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
 <div class="row">
@@ -16,7 +11,7 @@
     <div class="col-xs-12 col-md-4 text-center">
         <div class="row title">
             <div class="col-xs-1 col-md-1">
-                <img src="images/twitter1.png" alt="Twitter Img" style="width:80px;height:80px;">
+                <img src="Images/twitter1.png" id="twitterImage" alt="Twitter Img">
             </div>
             <div class="col-xs-11 col-md-11">
                 <h2>Tweets list</h2>
@@ -26,16 +21,19 @@
     <div class="col-md-4"></div>
 </div>
 
-<div class="tweetsList">
+<div class="tweets-list">
 </div>
 
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-xs-12 col-md-4 text-center">
-        <input type="button" onclick="location.href = 'newTweets.html';" name="send" value="Read tweets"/>
+        <input type="button" name="newTweetsButton" value="Read tweets"/>
     </div>
     <div class="col-md-4"></div>
 </div>
-<script language="JavaScript">getReadTweets()</script>
+<script src="bootstrap/content/Scripts/bootstrap.min.js"></script>
+<script type="text/javascript" src="Scripts/codebird.js"></script>
+<script type="text/javascript" src="Scripts/getTweets.js"></script>
+<script type="text/javascript" src="Scripts/tweetsList.js"></script>
 </body>
 </html>
